# Aeterna

./: .gitignore  AUDIT_MASTER.md  AUDIT_REPORT.md  DEVELOPER_GUIDE.md  README.md  RESEARCH_EXPERIENCE.md  build.sh  deploy_all.sh  evaluation.md  get_disc.js  mechanics_review.md  package-lock.json  package.json
apps/api/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
apps/api/src/: bolt_client.ts  index.ts  interaction_monitor.ts  simulate.ts  turnkey_client.ts  wallet_manager.ts  xp_engine.ts
frontend/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/forge/: page.tsx
frontend/app/scanner/: page.tsx
frontend/app/wallet/: page.tsx
frontend/components/: AvatarDisplay.tsx  CinematicHUD.tsx  Effects.tsx  Forge.tsx  GhostMatterMaterial.tsx  LivingBackground.tsx  MirrorSoul.tsx  PulseDashboard.tsx  RebornEngine.tsx  SoulHUD.tsx  SoulWallet.tsx  StoneViewer.tsx
frontend/hooks/: useAeternaAuth.ts  useAeternaPass.ts  usePulseBalance.ts  useSoulStats.ts
frontend/lib/: aeterna-program.ts  constants.ts  idl.json
frontend/scripts/: verify_ui.js
frontend/types/: shaders.d.ts
frontend/utils/: SoulBridge.ts
programs/aeterna/: Anchor.toml  build_errors.txt  build_output.txt
programs/world/: Anchor.toml  Cargo.toml
programs/world/src/: components.rs  lib.rs
pulse-service/: .env.example
pulse-service/src/: wallet_manager.ts
scripts/: infinite_sentinel.ts  simulate_festival.ts
(+21 files in other folders)
