[package]
name = "world"
version = "0.1.0"
description = "Aeterna World State (Bolt ECS)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "world"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
bolt-lang = "0.1.0" # Assuming Bolt is available or mocked for now
